# secify

./: .gitignore  Cargo.toml  README.md  build.rs
secify-cli/: Cargo.toml
secify-cli/src/: cli.rs  interactive.rs  main.rs  progress.rs
secify-lib/: Cargo.toml  build.rs
secify-lib/src/: archive.rs  compression.rs  core.rs  crypto.rs  error.rs  header.proto  lib.rs  progress.rs  streaming.rs
secify-lib/tests/: format_tests.rs  hmac_plaintext_tests.rs  integration_tests.rs
src/: cli.rs  crypto.rs  file_operations.rs  interactive.rs  lib.rs  main.rs  progress.rs  streaming.rs  tar_operations.rs
