[workspace]
members = ["secify-lib", "secify-cli"]
resolver = "2"

[workspace.dependencies]
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"
hmac = "0.12"
sha2 = "0.10"
tar = "0.4.44"
zstd = "0.13.3"
tempfile = "3.20.0"
