[package]
name = "secify-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for Secify encryption"
license = "MIT OR Apache-2.0"

[[bin]]
name = "secify"
path = "src/main.rs"

[dependencies]
secify-lib = { path = "../secify-lib" }
clap = { version = "4.5", features = ["derive"] }
anyhow = { workspace = true }
indicatif = "0.17"
rpassword = "7.4"

[dev-dependencies]
tempfile = { workspace = true }
